--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=dee8074b6f316fc4cc792dedb87c7e0e
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://baec2c5d137d88:b7c85957@us-cdbr-iron-east-01.cleardb.net/heroku_6bced481faac9ad?reconnect=true
 ###< doctrine/doctrine-bundle ###
