--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 index:
     path: /
     controller: App\Controller\PageController::index
+
+login:
+    path: /login
+    controller: App\Controller\PageCopntroller::login
