--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,4 +4,8 @@ index:
 
 login:
     path: /login
-    controller: App\Controller\PageCopntroller::login
+    controller: App\Controller\PageController::login
+    
+log:
+    path: /log
+    controller: App\Controller\ActionController::login    
