--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,4 +8,8 @@ login:
     
 log:
     path: /log
-    controller: App\Controller\ActionController::login    
+    controller: App\Controller\ActionController::login
+    
+api:
+    path: /api
+    controller: App\Controller\ApiController::call
