--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
+    actual_time: 1.1
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -27,5 +29,6 @@ services:
     # please note that last definitions always *replace* previous ones
 
     App\Service\ClientServices\GetDataService:
+        public: true
         arguments:
             $doctrine : '@doctrine'
