--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
-    actual_time: 1.1
+    delay_between_calls: 10.1
 
 services:
     # default configuration for services in *this* file
